# ComfyUI_Diffree

./: Diffree_node.py  README.md  __init__.py  no_need_requirements.txt  pyproject.toml  requirements.txt  utils.py  workflow.json
config/: generate.yaml
example/: example.json
k_diffusion/: __init__.py
stable_diffusion/: main.py  notebook_helpers.py
stable_diffusion/configs/autoencoder/: autoencoder_kl_16x16x16.yaml  autoencoder_kl_32x32x4.yaml  autoencoder_kl_64x64x3.yaml  autoencoder_kl_8x8x64.yaml
stable_diffusion/configs/latent-diffusion/: celebahq-ldm-vq-4.yaml  cin-ldm-vq-f8.yaml  cin256-v2.yaml  ffhq-ldm-vq-4.yaml  lsun_bedrooms-ldm-vq-4.yaml  lsun_churches-ldm-kl-8.yaml  txt2img-1p4B-eval.yaml
stable_diffusion/configs/retrieval-augmented-diffusion/: 768x768.yaml
stable_diffusion/configs/stable-diffusion/: v1-inference.yaml
stable_diffusion/ldmx/data/: imagenet.py
stable_diffusion/ldmx/models/: autoencoder.py
stable_diffusion/ldmx/models/diffusion/: ddim.py  ddpm.py  ddpm_diffree.py  ddpm_edit.py  plms.py
stable_diffusion/ldmx/modules/: attention.py
stable_diffusion/ldmx/modules/diffusionmodules/: model.py  openaimodel.py  openaimodel_diffree.py
stable_diffusion/ldmx/modules/encoders/: modules.py
stable_diffusion/ldmx/modules/image_degradation/: bsrgan_light.py
stable_diffusion/models/first_stage_models/kl-f16/: config.yaml
stable_diffusion/models/first_stage_models/kl-f32/: config.yaml
stable_diffusion/scripts/: img2img.py  inpaint.py  knn2img.py  sample_diffusion.py  train_searcher.py  txt2img.py
(+18 files in other folders)
