[project]
name = "comfyui_diffree"
description = "using diffree: Text-Guided Shape Free Object Inpainting with Diffusion Model"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_Diffree"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemx"
DisplayName = "ComfyUI_Diffree"
Icon = ""
